# medapp

./: README.md  pyproject.toml  simulation_result.json
simulation/: data.py  models.py  settings.py  simulation.py
