[tool.poetry]
name = "medication-tracker-simulation"
version = "0.1.0"
description = ""
authors = ["Anastasiia Ternyuk"]
readme = "README.md"
packages = [{include = "simulation"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

